--- a/src/elements/shared-styles.html
+++ b/src/elements/shared-styles.html
@@ -6,17 +6,17 @@
   <template>
     <style>
       :host {
-        --dark-primary-color: #512DA8;
-        --default-primary-color: #673AB7;
-        --focused-color: #311B92;
-        --light-primary-color: #D1C4E9;
+        --dark-primary-color: #303F9F;
+        --default-primary-color: #3F51B5;
+        --focused-color: #393ba3;
+        --light-primary-color: #C5CAE9;
         --text-primary-color: #FFFFFF;
-        --accent-color: #FF5252;
+        --accent-color: #448AFF;
         --primary-background-color: #FFFFFF;
-        --primary-text-color: #424242;
+        --primary-text-color: #212121;
         --secondary-text-color: #757575;
         --disabled-text-color: #BDBDBD;
-        --divider-color: #EDEDED;
+        --divider-color: #BDBDBD;
         --footer-background-color: #F5F5F5;
         --footer-text-color: #616161;
         --gplus-color: #DF312D;
