--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -162,27 +162,26 @@
             {$ viewHighlights $}
           </paper-button> -->
 
-          <paper-button 
-            on-tap="_scrollToTickets" 
-            ga-on="click"
-            ga-event-category="tickets" 
-            ga-event-action="scroll" 
-            ga-event-label="hero block - scroll to tickets"
-            primary invert >
-            {$ callOnSpeakers $} Call on Speakers
-          </paper-button>
-
-          <paper-button
-            on-tap="_scrollToTickets"
-            ga-on="click"
-            ga-event-category="tickets"
-            ga-event-action="scroll"
-            ga-event-label="hero block - scroll to tickets"
-            primary invert
-          >
-            <iron-icon icon="hoverboard:ticket"></iron-icon>
-            {$ buyTicket $}
-          </paper-button>
+          <a href="/blog/posts/c4p" rel="noopener noreferrer" target="_blank">
+            <paper-button primary="" invert="" role="button" tabindex="0" animated="" elevation="0" aria-disabled="false" class="">
+              <iron-icon icon="hoverboard:movie"></iron-icon>
+              Apply to speak
+            </paper-button>
+          </a>
+           
+          <a href="https://www.meetup.com/GDG-Uyo/events/254550307/" rel="noopener noreferrer" target="_blank">
+            <paper-button
+              on-tap="_scrollToTickets"
+              ga-on="click"
+              ga-event-category="tickets"
+              ga-event-action="scroll"
+              ga-event-label="hero block - scroll to tickets"
+              primary invert
+            >
+              <iron-icon icon="hoverboard:ticket"></iron-icon>
+              {$ buyTicket $}
+            </paper-button>
+          </a>  
         </div>
 
         <div class="scroll-down" on-tap="_scrollNextBlock">
