resources.jso edited

--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -162,12 +162,12 @@
             {$ viewHighlights $}
           </paper-button> -->
 
-          <a href="/blog/posts/c4p" rel="noopener noreferrer" target="_blank">
+          <!-- <a href="/blog/posts/c4p" rel="noopener noreferrer" target="_blank">
             <paper-button primary="" invert="" role="button" tabindex="0" animated="" elevation="0" aria-disabled="false" class="">
               <iron-icon icon="hoverboard:movie"></iron-icon>
               Apply to speak
             </paper-button>
-          </a>
+          </a> -->
            
           <a href="https://www.meetup.com/GDG-Uyo/events/254550307/" rel="noopener noreferrer" target="_blank">
             <paper-button
