--- a/src/elements/tickets-block.html
+++ b/src/elements/tickets-block.html
@@ -72,6 +72,7 @@
       .price {
         color: var(--default-primary-color);
         font-size: 40px;
+        content: "\20A6";
       }
 
       .discount {
