--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -235,6 +235,19 @@
             data-route="cod"
             data-path="pages/cod-page.html"
           ></cod-page>
+          <!-- For Tickets -->
+          <student-ticket-page
+           data-route="ticket/student"
+           data-path="pages/student-ticket-page.html"
+          ></student-ticket-page>
+          <regular-ticket-page
+          data-route="ticket/regular"
+          data-path="pages/regular-ticket-page.html"
+          ></regular-ticket-page>
+          <support-ticket-page
+          data-route="ticket/i-love-dfss"
+          data-path="pages/support-ticket-page.html"
+          ></support-ticket-page>
         </iron-lazy-pages>
 
       </app-header-layout>
