--- a/src/mixins/redux-mixin.html
+++ b/src/mixins/redux-mixin.html
@@ -49,6 +49,10 @@
         isOpened: false,
         data: {},
       },
+      [DIALOGS.TICKET]: {
+        isOpened: false,
+        data: {},
+      },
     },
     tickets: {
       fetching: false,
