--- a/src/pages/home-page.html
+++ b/src/pages/home-page.html
@@ -169,7 +169,7 @@
             </paper-button>
           </a> -->
            
-          <a href="https://www.meetup.com/GDG-Uyo/events/254550307/" rel="noopener noreferrer" target="_blank">
+          <a href="#ticket" rel="noopener noreferrer">
             <paper-button
               on-tap="_scrollToTickets"
               ga-on="click"
