--- a/src/elements/dialogs/ticket-dialog.html
+++ b/src/elements/dialogs/ticket-dialog.html
@@ -193,7 +193,13 @@
                     ref: '' + Math.floor((Math.random() * 1000000000) + 1), 
                     callback: function (response) {
                      dialogsActions.closeDialog(DIALOGS.TICKET);
-                     alert('successfully subscribed. transaction ref is ' + response.reference);
+                     // alert('successfully subscribed. transaction ref is ' + response.reference);
+                     var data = {
+                        email: this.email,
+                        firstFieldValue: this.firstFieldValue,
+                        secondFieldValue: this.secondFieldValue,
+                     };
+                     ticketActions.email(data);
                     }, 
                     onClose: function () {
                         alert('window closed');
