--- a/src/elements/dialogs/ticket-dialog.html
+++ b/src/elements/dialogs/ticket-dialog.html
@@ -98,6 +98,10 @@
                         type: Object,
                         statePath: 'ui',
                     },
+                    user: {
+                       type: Object,
+                       statePath: 'user',
+                    },
                     registered: {
                         type: Boolean,
                         statePath: 'registered',
@@ -154,8 +158,18 @@
             }
 
             _handleDialogToggled(opened, data) {
+                let userData = {};
                 if (data) {
                     this.errorOccurred = data.errorOccurred;
+                }
+                if (this.user.signedIn) {
+                    // console.log(this.user);
+                    const fullNameSplit = this.user.displayName.split(' ');
+                    userData = {
+                     firstFieldValue: fullNameSplit[0],
+                     secondFieldValue: fullNameSplit[1],
+                     emailInput : this.user.email,
+                    };
                 }
 
                 this.title = '{$ ticketDialog.formTitle $}';
@@ -163,7 +177,7 @@
                 this.firstFieldLabel = '{$ ticketDialog.firstName $}';
                 this.secondFieldLabel = '{$ ticketDialog.lastName $}';
                 this.amount = data.amount;
-                this._prefillFields(data);
+                this._prefillFields(userData);
             }
 
             _register() {
@@ -192,14 +206,17 @@
                     },
                     ref: '' + Math.floor((Math.random() * 1000000000) + 1), 
                     callback: function (response) {
-                     dialogsActions.closeDialog(DIALOGS.TICKET);
-                     // alert('successfully subscribed. transaction ref is ' + response.reference);
+                     alert('successfully subscribed. transaction ref is ' + response.reference);
                      var data = {
-                        email: this.email,
-                        firstFieldValue: this.firstFieldValue,
-                        secondFieldValue: this.secondFieldValue,
+                        email: this.defaults.email,
+                        firstFieldValue: this.defaults.firstname,
+                        secondFieldValue: this.defaults.lastname,
+                        amount : this.defaults.amount / 100,
                      };
-                     ticketActions.email(data);
+                       dialogsActions.closeDialog(DIALOGS.TICKET);
+                       ticketActions.email(data);
+                       //console.log(this.defaults);
+                       //this._sendEmail(data);
                     }, 
                     onClose: function () {
                         alert('window closed');
@@ -211,6 +228,10 @@
                 // firstFieldValue: this.firstFieldValue,
                 // secondFieldValue: this.secondFieldValue,
                 // });
+            }
+
+            _sendEmail(data) {
+                
             }
 
             _validateEmail(email) {
@@ -231,12 +252,12 @@
                 const emailInput = this.shadowRoot.querySelector('#emailInput');
                 firstField.value = userData ? userData.firstFieldValue : '';
                 secondField.value = userData ? userData.secondFieldValue : '';
+                emailInput.value = userData ? userData.emailInput : '';
                 firstField.focus();
                 firstField.blur();
                 secondField.focus();
                 secondField.blur();
                 emailInput.blur();
-                emailInput.value = '';
                 emailInput.invalid = false;
                 this.validate = true;
             }
