--- a/src/hoverboard-app.html
+++ b/src/hoverboard-app.html
@@ -217,6 +217,11 @@
             data-path="pages/speakers-page.html"
             route="[[subroute]]"
           ></speakers-page>
+          <attendees-page
+            data-route="attendees" 
+            data-path="pages/attendees-page.html" 
+            route="[[subroute]]"
+          ></attendees-page>
           <previous-speakers-page
             data-route="previous-speakers"
             data-path="pages/previous-speakers-page.html"
