--- a/src/mixins/redux-mixin.html
+++ b/src/mixins/redux-mixin.html
@@ -93,7 +93,6 @@
       fetching: false,
       fetchingError: null,
       list: [],
-      obj: {},
     },
     sessions: {
       list: {
@@ -137,7 +136,7 @@
       videos: videosReducer(state.videos, action),
       blog: blogReducer(state.blog, action),
       speakers: speakersReducer(state.speakers, action),
-      speakers: attendeesReducer(state.attendees, action),
+      attendees: attendeesReducer(state.attendees, action),
       previousSpeakers: previousSpeakersReducer(state.previousSpeakers, action),
       sessions: sessionsReducer(state.sessions, action),
       schedule: scheduleReducer(state.schedule, action),
