--- a/src/elements/tickets-block.html
+++ b/src/elements/tickets-block.html
@@ -249,7 +249,7 @@
                 });
             }
         } else {
-           dialogsActions.openDialog(DIALOGS.SIGIN);
+           dialogsActions.openDialog(DIALOGS.SIGNIN);
         }
       }
     
