--- a/src/elements/dialogs/ticket-dialog.html
+++ b/src/elements/dialogs/ticket-dialog.html
@@ -200,8 +200,8 @@
                 this.plan = data.plan;
                 this.photo = data.photo;
                 this.coupon = data.coupon,
-                this.coupon_id = data.id || '',
-                this.coupon_code = data.code || '',
+                this.coupon_id = data.id,
+                this.coupon_code = data.code,
                 this._prefillFields(userData);
             }
 
@@ -279,7 +279,7 @@
             _sendEmail(data){
                // console.log(data);
               const username = this.shadowRoot.querySelector('#username').value;
-
+       
                 var xmlhttp = new XMLHttpRequest();
                 xmlhttp.onreadystatechange = function () {
                     if (this.readyState == 4) {
@@ -290,7 +290,7 @@
                             });
                             setTimeout(function () {
                                 window.location.href = "https://www.meetup.com/GDG-Uyo/events/254550307/"; 
-                            }, 7000);
+                            }, 3000);
                         }else{
                             window.toastr.error("Mail not sent, contact devfest support", {
                                 timeOut: 3000
