--- a/src/elements/tickets-block.html
+++ b/src/elements/tickets-block.html
@@ -283,7 +283,7 @@
             var xmlhttp = new XMLHttpRequest();
             xmlhttp.onreadystatechange = function () {
                 if (this.readyState == 4) {    
-                  //  console.log(this);        
+                   console.log(this);        
                     if (this.status === 200) {
                       window.toastr.info("Coupon code activated", {
                          timeOut: 3000
