fix issue with large dialog modal

--- a/src/elements/dialogs/ticket-dialog.html
+++ b/src/elements/dialogs/ticket-dialog.html
@@ -33,6 +33,19 @@
                 line-height: 1.5;
             }
 
+            /* Smartphones (portrait and landscape) ----------- */
+            @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+            /* Styles */
+                .dialog-header {
+                    margin-bottom: 16px;
+                    padding: 22px;
+                    background: var(--default-primary-color);
+                    color: #fff;
+                    font-size: 12px;
+                    line-height: 1.0;
+                }
+            }
+
             paper-input {
                 margin: 16px 32px 0;
             }
